# mcp_pymdu

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  smithery.yaml  test_chatgpt.py
examples/: client_llamindex.py  client_llamindex_2.py
mcp_pymdu/: Dockerfile  server.py  smithery.yaml
