[project]
name = "mcp_pymdu"
version = "0.1.0"
description = ""
authors = [
    { name = "Boris Brangeon", email = "boris.brangeon@plateforme-tipee.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "geopandas>=1.1.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "matplotlib>=3.10.3,<4.0.0",
    "mcp[cli]>=1.9.4,<2.0.0",
    "pillow>=11.2.1,<12.0.0",
    "pyautogui>=0.9.54,<0.10.0",
    "pydantic>=2.11.7,<3.0.0",
    "numpy==1.26.3",
    "pymdu @ git+https://github.com/rupeelab17/pymdu.git",
    "fastmcp>=2.9.2,<3.0.0",
    "dotenv>=0.9.9,<0.10.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
serpapi = "^0.1.5"
llama-index-tools-mcp = "^0.2.5"
llama-index-llms-ollama = "^0.6.2"
llama-index-tools-duckduckgo = "^0.3.0"
google-search-results = "^2.4.2"
mcpo = "^0.0.16"
